# src/lib/swagger.json
@@ -2215,11 +2215,11 @@
         }
       }
     },
-    "/admin/team/close": {
+    "/admin/close/matching": {
       "post": {
         "tags": ["Admin"],
         "summary": "매칭 성공한 팀 삭제하기",
-        "description": "매칭에 성공한 팀 정보를 삭제합니다. (추후 환불 등 불가!) \n\n 매칭 완료(state=0)과 다르게 삭제(is_deleted=true) 시킵니다!",
+        "description": "매칭에 성공한 팀 정보 및 매칭 정보를 삭제합니다. (추후 환불 등 불가!) \n\n 매칭 완료(state=0)과 다르게 삭제(is_deleted=true) 시킵니다!",
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "content": {
@@ -2233,6 +2233,79 @@
                   "femaleTeamId": {
                     "type": "integer",
                     "example": 2
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "매칭 정보 삭제하기 성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "매칭 정보 삭제하기에 성공하였습니다"
+                    },
+                    "data": {
+                      "type": "object",
+                      "example": {
+                        "success": true
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "해당 매칭 정보가 없는 경우",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Fail"
+                },
+                "examples": {
+                  "1": {
+                    "summary": "ADMIN_NO_RESULT",
+                    "value": {
+                      "status": 400,
+                      "success": false,
+                      "message": "조회 결과가 없습니다"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/admin/close/team": {
+      "post": {
+        "tags": ["Admin"],
+        "summary": "매칭 실패한 팀정보 삭제하기",
+        "description": "매칭에 실패한 팀 정보를 삭제합니다. (is_deleted=true) \n\n 수동으로 삭제해줘야 해당 유저가 새롭게 매칭을 신청할 수 있습니다!",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "properties": {
+                  "ourteamId": {
+                    "type": "integer",
+                    "example": 1
                   }
                 }
               }
